stop html frags collapsing in pagebuilder pages

--- a/styles/component/pagebuilder/_content-block.scss
+++ b/styles/component/pagebuilder/_content-block.scss
@@ -21,7 +21,8 @@
 .content-block--text,
 .content-block--image_text .media__copy,
 .content-block--form,
-.content-block--quote {
+.content-block--quote,
+.content-block--htmlfragment {
 
 	line-height: $template-option-line-height;
 }
